start edit java server